@@ -5,7 +5,7 @@ DIST rad-0.1.2.tar.gz 4876 RMD160 3acaabff904d50f008a030021e4559ff5d517f8e SHA1 
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7ApfwACgkQzJrj3cAXR0nIpwCghPDfRgKF8+/8ORowJhswBuwj
-YXsAnia9i6oSuEx7l9Tq8mPniyu62iWB
-=KG6P
+iEYEAREKAAYFAk9SQj8ACgkQzJrj3cAXR0lnrQCeJKj6iJE89/KP3IJf+Lwm+oyx
+Ye4AnR9wlUHHL9BRS+949PmmOjsnNgFG
+=+AgB
 -----END PGP SIGNATURE-----
