@@ -9,4 +9,4 @@ RDEPEND=dev-python/colorama dev-python/plac dev-python/pyyaml >=app-admin/eselec
 SLOT=0
 SRC_URI=mirror://pypi/r/rad/rad-0.1.2.tar.gz
 _eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	eutils	ba24d79270ea0022703f16b5de80051c	jnrowe-pypi	ec904774b8c8477cdb89043eb65c764c	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	06dff99bcab2fd584bd6d2aa6019ee19	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=7c75c46aad60ac9983d0c6be7968e252
+_md5_=8749cb85acbebeef5071f99b62be0609
